GNOME Bugzilla – Bug 794663
encodebin: Inform about missing elements in the "text" error field
Last modified: 2018-04-04 23:57:35 UTC
I propose it here as it looks like it is not what is done in decodebin2, I wonder why?
Created attachment 370093 [details] [review] encodebin: Inform about missing elements in the "text" error field Instead of the debug field, that information should be directly exposed to end users.
commit dbc89373ea65f33f208e46cd40738cafba17ee97 Author: Thibault Saunier <tsaunier@igalia.com> Date: Sat Mar 24 15:51:20 2018 -0300 encodebin: Inform about missing elements in the "text" error field Instead of the debug field, that information should be directly exposed to end users. https://bugzilla.gnome.org/show_bug.cgi?id=794663