encodebin: Inform about missing elements in the "text" error field

Instead of the debug field, that information should be directly
exposed to end users.

https://bugzilla.gnome.org/show_bug.cgi?id=794663